# DHA-Quality-Evaluation

./: .gitignore  AOD_dataloader.py  AOD_dehaze.py  AOD_net.py  AOD_train.py  DehIQA.py  DehIQA_dataloader.py  FR-IQA-PSNR.csv  FR_IQA.py  FVR_FR_IQA_PSNR.csv  README.md  dark_channel_prior.py  equalized_hist.py  evaluation.py  fast_vis_restoration.py  fast_visibility_restoration.py  main.py  pyproject.toml  tarel.py
AOD-net-snapshots/: Epoch0.pth  Epoch1.pth  Epoch10.pth  Epoch11.pth  Epoch12.pth  Epoch13.pth  Epoch2.pth  Epoch3.pth  Epoch4.pth  Epoch5.pth  Epoch6.pth  Epoch7.pth  Epoch8.pth  Epoch9.pth  dehazer.pth
dehaze/: dark_channel_prior.py
