[project]
name = "dha-quality-evaluation"
version = "0.1.0"
description = "The Reproduction and Quality Evaluation of Image Dehazing Algorithms"
requires-python = ">=3.13"
dependencies = [
    "black>=25.9.0",
    "opencv-python==4.12.0.88",
    "pandas>=2.3.3",
    "pandas-stubs==2.3.2.250926",
    "scikit-image==0.25.2",
    "scikit-learn==1.7.2",
    "torch==2.8.0",
    "torchvision==0.23.0",
]
[tool.pyrefly]
python.pyrefly.disableTypeErrors = "force-on"
